--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mr. Black Gloves — 75 Free Cuts</title>
-  <meta name="description" content="Claim one of 75 free cuts for Students or New Clients at Mr. Black Gloves in East Orange, NJ. Limited slots.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="wrap hero-inner">
-      <img src="assets/mbg_logo.png" alt="Mr. Black Gloves" class="logo">
+      <img src="assets/mbg_logo.png" alt="Mr. Black Gloves" class="logo" onerror="this.style.display='none'">
       <div class="hero-copy">
         <h1>75 Free Cuts</h1>
         <p class="sub">Students or New Clients… claim your spot, then book your time.</p>
@@ -25,8 +22,8 @@
         <div class="cta-row">
           <a class="cta" href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt" target="_blank" rel="noopener">Booksy — Pick Your Time</a>
           <div class="qr">
-            <img src="assets/qr_mbg_freecuts.png" alt="Scan to visit mrblackgloves.com/freecuts">
-            <div class="qr-caption">Scan or visit mrblackgloves.com/freecuts</div>
+            <img src="assets/qr_freecuts_domain.png" alt="Scan to visit mrblackgloves.com/freecuts" width="140" height="140">
+            <div class="qr-caption">mrblackgloves.com/freecuts</div>
           </div>
         </div>
       </div>
