--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="hero">
     <div class="wrap hero-inner">
-      <img src="assets/mbg_logo.png" alt="Mr. Black Gloves" class="logo" onerror="this.style.display='none'">
+      <img src="mbg_logo.png" alt="Mr. Black Gloves Logo">
       <div class="hero-copy">
         <h1>75 Free Cuts</h1>
         <p class="sub">Students or New Clients… claim your spot, then book your time.</p>
@@ -22,7 +22,7 @@
         <div class="cta-row">
           <a class="cta" href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt" target="_blank" rel="noopener">Booksy — Pick Your Time</a>
           <div class="qr">
-            <img src="assets/qr_freecuts_domain.png" alt="Scan to visit mrblackgloves.com/freecuts" width="140" height="140">
+            <img src="qr_freecuts_domain.png" alt="QR code">
             <div class="qr-caption">mrblackgloves.com/freecuts</div>
           </div>
         </div>
