--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
           <li><strong>Limit</strong> 75 student slots + 75 adult slots. Page will close when slots are gone.</li>
         </ul>
         <div class="cta-row">
-          <a class="cta" href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt" target="_blank" rel="noopener">Booksy — Pick Your Time</a>
-          <div class="qr">
-            <img src="qr_freecuts_domain.png" alt="QR code">
-            <div class="qr-caption">mrblackgloves.com/freecuts</div>
+          <a class="cta" href="https://booksy.com/en-..." target="_blank">Booksy — Pick Your Time</a>
+<div class="qr">
+  <img src="qr_freecuts_domain.png" alt="Free Cuts QR">
+  <div class="qr-caption">mrblackgloves.com/freecuts</div>
+</div>
+
+<div class="qr">
+  <img src="qr_booksy.png" alt="Booksy QR">
+  <div class="qr-caption">Booksy Appointments</div>
+</div>
           </div>
         </div>
       </div>
