--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="hero">
+  <header class="hero hero-bg">
     <div class="wrap hero-inner">
       <img src="mbg_logo.png" alt="Mr. Black Gloves Logo">
       <div class="hero-copy">
