--- a/index.html
+++ b/index.html
@@ -19,11 +19,19 @@
           <li><strong>How it works</strong> Step 1… fill the intake form. Step 2… tap Booksy to pick your time.</li>
           <li><strong>Limit</strong> 75 student slots + 75 adult slots. Page will close when slots are gone.</li>
         </ul>
-        <div class="cta-row">
-          <a class="cta" href="https://booksy.com/en-..." target="_blank">Booksy — Pick Your Time</a>
-<div class="qr">
-  <img src="qr_freecuts_domain.png" alt="Free Cuts QR">
-  <div class="qr-caption">mrblackgloves.com/freecuts</div>
+      <div class="cta-row">
+  <!-- TOP BUTTON → your exact Booksy link -->
+  <a class="cta" href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt" target="_blank" rel="noopener">
+    Booksy — Pick Your Time
+  </a>
+
+  <!-- Domain QR only (good + working) -->
+  <div class="qr">
+    <img src="qr_freecuts_domain.png" alt="QR to mrblackgloves.com/freecuts">
+    <a class="qr-caption" href="https://mrblackgloves.com/freecuts" target="_blank" rel="noopener">
+      mrblackgloves.com/freecuts
+    </a>
+  </div>
 </div>
 <div class="qr">
   <img src="qr_booksy.png" alt="Booksy QR">
@@ -65,37 +73,3 @@
   </footer>
 </body>
 </html>
-/* --- Extra polish --- */
-
-/* Make hero art a little smaller on phones */
-.hero img {
-  max-width: 90%;
-  margin: 0 auto;
-  display: block;
-}
-
-/* Center the Google Form card on mobile */
-.card {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* Keep form readable on wide screens */
-.embed iframe {
-  max-width: 700px;
-  margin: 0 auto;
-  display: block;
-}
-
-/* Tighter spacing for big screens */
-@media (min-width: 900px) {
-  .hero-inner {
-    align-items: center;
-  }
-  .hero img {
-    max-width: 85%;
-  }
-  .card {
-    max-width: 750px;
-  }
-}
