--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfvVaMn-Mlzc6UoHMlnvzmw6osBZGDPOvYlUfomJ_aNoGAXnQ/viewform?embedded=true" width="100%" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
       <p class="note">After you submit the form, click the button below to pick your time.</p>
-      <a class="cta outline" href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt" target="_blank" rel="noopener">Booksy — Pick Your Time</a>
+      <a class="cta outline" href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt" target="_blank" rel="noopener">
+  Booksy — Pick Your Time
+</a>
     </section>
 
     <section class="fineprint">
