--- a/index.html
+++ b/index.html
@@ -45,17 +45,21 @@
 
   <main class="wrap">
     <section class="card">
-      <h2>Step 1… Claim your free cut</h2>
-      <p>Fill this intake form so we lock you in and send your confirmation. After you submit, you’ll be sent to Booksy to select your time.</p>
-      <div class="embed">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfvVaMn-Mlzc6UoHMlnvzmw6osBZGDPOvYlUfomJ_aNoGAXnQ/viewform?embedded=true" width="100%" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-      </div>
-      <p class="note">After you submit the form, click the button below to pick your time.</p>
-      <a class="cta outline" href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt" target="_blank" rel="noopener">
-  Booksy — Pick Your Time
-</a>
-    </section>
+  <h2>Step 1… Claim your free cut</h2>
+  <p>Fill this intake form so we lock you in and send your confirmation. After you submit, you’ll be sent to Booksy to select your time.</p>
 
+  <!-- OPEN GOOGLE FORM IN NEW TAB -->
+  <a class="cta outline" href="https://docs.google.com/forms/d/e/1FAIpQLSfvVaMn-Mlzc6UoHMlnvzmw6osBZGDPOvYlUfomJ_aNoGAXnQ/viewform" target="_blank" rel="noopener">
+    Fill Out Intake Form
+  </a>
+
+  <p class="note" style="margin-top:14px;">After you submit the form, click the button below to pick your time.</p>
+
+  <!-- MATCHING BOOKSY BUTTON UNDER THE FORM -->
+  <a class="cta outline" href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt" target="_blank" rel="noopener">
+    Booksy — Pick Your Time
+  </a>
+</section>
     <section class="fineprint">
       <h3>Rules</h3>
       <ul>
