--- a/index.html
+++ b/index.html
@@ -30,19 +30,26 @@
   </header>
 
   <main class="wrap">
-    <section class="card">
+   <section class="card">
   <h2>Step 1… Claim your free cut</h2>
   <p>Fill this intake form so we lock you in and send your confirmation. After you submit, you’ll be sent to Booksy to select your time.</p>
 
-  <!-- OPEN GOOGLE FORM IN NEW TAB -->
-  <a class="cta outline" href="https://docs.google.com/forms/d/e/1FAIpQLSfvVaMn-Mlzc6UoHMlnvzmw6osBZGDPOvYlUfomJ_aNoGAXnQ/viewform" target="_blank" rel="noopener">
-    Fill Out Intake Form
-  </a>
+  <!-- Embedded Google Form -->
+  <div class="embed">
+    <iframe
+      src="https://docs.google.com/forms/d/e/1FAIpQLSfvVaMn-Mlzc6UoHMlnvzmw6osBZGDPOvYlUfomJ_aNoGAXnQ/viewform?embedded=true"
+      allow="fullscreen"
+      frameborder="0"
+      loading="lazy"
+    ></iframe>
+  </div>
 
-  <p class="note" style="margin-top:14px;">After you submit the form, click the button below to pick your time.</p>
+  <p class="note">After you submit the form, click the button below to pick your time.</p>
 
-  <!-- MATCHING BOOKSY BUTTON UNDER THE FORM -->
-  <a class="cta outline" href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt" target="_blank" rel="noopener">
+  <!-- The ONLY booking button on the page -->
+  <a class="cta outline"
+     href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt"
+     target="_blank" rel="noopener">
     Booksy — Pick Your Time
   </a>
 </section>
