--- a/index.html
+++ b/index.html
@@ -1,74 +1,73 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mr. Black Gloves — 75 Free Cuts</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
+  <!-- HERO (background image, blurred) -->
   <header class="hero hero-bg">
     <div class="wrap hero-inner">
-      <img src="mbg_logo.png" alt="Mr. Black Gloves Logo">
       <div class="hero-copy">
         <h1>75 Free Cuts</h1>
         <p class="sub">Students or New Clients… claim your spot, then book your time.</p>
+
         <ul class="details">
           <li><strong>Where</strong> 79 Hamilton St. (Above Café By Us), East Orange, NJ 07017</li>
           <li><strong>Who</strong> Students or New Clients. One free service per person.</li>
           <li><strong>How it works</strong> Step 1… fill the intake form. Step 2… tap Booksy to pick your time.</li>
           <li><strong>Limit</strong> 75 student slots + 75 adult slots. Page will close when slots are gone.</li>
         </ul>
-</div>
-  <img src="qr_booksy.png" alt="Booksy QR">
-  <div class="qr-caption">Booksy Appointments</div>
-</div>
-          </div>
-        </div>
       </div>
     </div>
   </header>
 
-  <main class="wrap">
-   <section class="card">
-  <h2>Step 1… Claim your free cut</h2>
-  <p>Fill this intake form so we lock you in and send your confirmation. After you submit, you’ll be sent to Booksy to select your time.</p>
+  <main>
+    <section class="wrap card">
+      <h2>Step 1… Claim your free cut</h2>
+      <p>Fill this intake form so we lock you in and send your confirmation. After you submit, you’ll be sent to Booksy to select your time.</p>
 
-  <!-- Embedded Google Form -->
-  <div class="embed">
-    <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLSfvVaMn-Mlzc6UoHMlnvzmw6osBZGDPOvYlUfomJ_aNoGAXnQ/viewform?embedded=true"
-      allow="fullscreen"
-      frameborder="0"
-      loading="lazy"
-    ></iframe>
-  </div>
+      <!-- Embedded Google Form -->
+      <div class="embed">
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLSfvVaMn-Mlzc6UoHMlnvzmw6osBZGDPOvYlUfomJ_aNoGAXnQ/viewform?embedded=true"
+          allow="fullscreen"
+          frameborder="0"
+          loading="lazy"
+        ></iframe>
+      </div>
 
-  <p class="note">After you submit the form, click the button below to pick your time.</p>
+      <p class="note">After you submit the form, click the button below to pick your time.</p>
 
-  <!-- The ONLY booking button on the page -->
-  <a class="cta outline"
-     href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt"
-     target="_blank" rel="noopener">
-    Booksy — Pick Your Time
-  </a>
-</section>
-    <section class="fineprint">
+      <!-- The ONLY booking button -->
+      <a class="cta outline"
+         href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt"
+         target="_blank" rel="noopener">
+        Booksy — Pick Your Time
+      </a>
+    </section>
+
+    <section class="wrap rules">
       <h3>Rules</h3>
       <ul>
         <li>New clients or students only. One free service per person.</li>
-        <li>Valid for standard cut. Add-ons like beard work, designs, shampoo, or enhancements can be added at the shop.</li>
+        <li>Valid for standard cut. Add‑ons like beard work, designs, shampoo, or enhancements can be added at the shop.</li>
         <li>Must book through Booksy after submitting the form.</li>
         <li>Missed appointments may forfeit the free slot.</li>
       </ul>
-      <p class="privacy">Your info is used to confirm your appointment and send shop updates. We never sell your data.</p>
+      <p class="fineprint">Your info is used to confirm your appointment and send shop updates. We never sell your data.</p>
     </section>
   </main>
 
   <footer class="footer">
     <div class="wrap">
-      <p>© 2025 Mr. Black Gloves · East Orange, NJ · <a href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt" target="_blank" rel="noopener">Booksy</a></p>
+      © 2025 Mr. Black Gloves · East Orange, NJ ·
+      <a href="https://booksy.com/en-us/instant-experiences/widget/91188?instant_experiences_enabled=true&ig_ix=truehtt" target="_blank" rel="noopener">Booksy</a>
     </div>
   </footer>
+
 </body>
 </html>
